--- a/multipe/package.json
+++ b/multipe/package.json
@@ -6,9 +6,39 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node build/dev-server.js",
-    "build": "webpack --config config/webpack.dev.config.js --mode development",
-    "build:prod": "webpack --config config/webpack.prod.config.js --mode production"
+    "dev": "node_modules/.bin/webpack --config build/webpack.dev.js",
+    "build": "node_modules/.bin/webpack --config build/webpack.test.js",
+    "build:prod": "node_modules/.bin/webpack --config build/webpack.prod.js",
+    "bb": "node build/build.js"
   },
   "author": "kevingui",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "autoprefixer": "^9.4.9",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "chalk": "^2.4.2",
+    "css-loader": "^2.1.0",
+    "node-sass": "^4.11.0",
+    "postcss-loader": "^3.0.0",
+    "precss": "^4.0.0",
+    "sass-loader": "^7.1.0",
+    "semver": "^5.6.0",
+    "shelljs": "^0.8.3",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.2",
+    "webpack": "^4.29.5",
+    "webpack-cli": "^3.2.3",
+    "webpack-merge": "^4.2.1"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1",
+    "zepto": "^1.2.0"
+  },
+  "engines": {
+    "node": ">= 8.0.0",
+    "npm": ">= 3.0.0"
+  }
 }
