--- a/multipe/package.json
+++ b/multipe/package.json
@@ -4,11 +4,11 @@
   "description": "webpack，多入口脚手架",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node build/dev-server.js",
-    "dev": "node_modules/.bin/webpack --config build/webpack.dev.js",
-    "build": "node_modules/.bin/webpack --config build/webpack.test.js",
+    "start:dev": "./node_modules/.bin/webpack-dev-server --config build/webpack.dev.js",
+    "start:prod": "./node_modules/.bin/webpack-dev-server",
+    "build:dev": "node_modules/.bin/webpack --config build/webpack.test.js",
     "build:prod": "node_modules/.bin/webpack --config build/webpack.prod.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "bb": "node build/build.js"
   },
   "author": "kevingui",
@@ -20,8 +20,13 @@
     "babel-loader": "^8.0.5",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "chalk": "^2.4.2",
+    "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^2.1.0",
+    "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
     "sass-loader": "^7.1.0",
@@ -29,8 +34,10 @@
     "shelljs": "^0.8.3",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.2",
+    "url-loader": "^1.1.2",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.1",
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
